# ResumeBuilder

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .recontextualization-P1-T09.md  .recontextualization-P1-T10.md  .recontextualization-P1-T12.md  .recontextualization-P2-T01.md  .recontextualization-P2-T05.md  .recontextualization-P2-T07.md  .recontextualization-P2-T09.md  .recontextualization-template.md  .secrets.baseline  AUTONOMOUS_DEVELOPMENT_PROMPT.md  BACKLOG.md  CLAUDE.md  Dockerfile  README.md  REQUIREMENTS.md  config.schema.json  docker-compose.yml  pyproject.toml
.claude/agents/: architecture-reviewer.md  devops-reviewer.md  qa-reviewer.md  ui-ux-reviewer.md
.git-hooks/: enforce-recontextualization
.github/workflows/: ci.yml
docs/: RECONTEXTUALIZATION_HOOK.md  RETROSPECTIVE-PHASE2.md  RETRO_LOG.md  REVIEW_FINDINGS.md
docs/adr/: 0001-contact-info-in-resume-model.md  0002-no-langchain-native-tool-use.md  0003-async-agent-design.md
docs/backlog/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md
docs/recontextualization/: recontextualization-P1-T11.md  recontextualization-P2-T03.md  recontextualization-P2-T11.md  recontextualization-P3-T01.md  recontextualization-P3-T02.md  recontextualization-P3-T03.md  recontextualization-P3-T04.md
sample_data/: Certifications.csv  Education.csv  Languages.csv  Positions.csv  Profile.csv  Projects.csv  Publications.csv  README.md  Skills.csv
src/resume_builder/: __init__.py  exceptions.py
src/resume_builder/agents/: __init__.py  base.py  hr_agent.py  matcher_agent.py  optimizer_agent.py  orchestrator.py  parser_agent.py  qa_agent.py
src/resume_builder/agents/tools/: __init__.py  matching.py  optimization.py  parsing.py  review.py  review_hr.py  review_qa.py
src/resume_builder/ai/: __init__.py
src/resume_builder/generators/: __init__.py  constants.py  docx.py  html.py  pdf.py  protocol.py
src/resume_builder/models/: __init__.py  agent.py  config.py  hr.py  match.py  optimizer.py  orchestrator.py  qa.py  resume.py
src/resume_builder/parsers/: __init__.py  certifications.py  education.py  honors.py  languages.py  linkedin.py  positions.py  profile.py  projects.py  publications.py  remaining.py  skills.py  volunteer.py
src/resume_builder/templates/: ats.html  base.html  classic.html  modern.html  tech.html
src/resume_builder/utils/: __init__.py  logging.py
tests/: conftest.py
tests/fixtures/api_responses/: matcher_response.json  parser_response.json
tests/fixtures/jobs/: ml_engineer_job.txt  senior_swe_job.txt
tests/fixtures/linkedin/: malformed_dates.csv  missing_columns.csv  valid_positions.csv  valid_profile.csv  valid_skills.csv
tests/unit/: test_agent_models.py  test_config_models.py  test_education_parser.py  test_exceptions.py  test_generators.py  test_linkedin_parser.py  test_logging.py  test_models.py  test_positions_parser.py  test_profile_parser.py  test_remaining_parsers.py  test_skills_parser.py  test_style_templates.py  test_templates.py
tests/unit/test_agents/: test_base_agent.py  test_hr_agent.py  test_matcher_agent.py  test_matching_tools.py  test_optimization_tools.py  test_optimizer_agent.py  test_orchestrator.py  test_parser_agent.py  test_parsing_tools.py  test_qa_agent.py  test_review_tools.py  test_token_tracking.py
